# cap_prj

./: .gitignore  .gitmodules  README.md
docs/notes/: Notes.md  plan.md
docs/proposal/: Capstone Project Plan - Manu Hegde.docx  Capstone Proposal - Manu Hegde.docx
docs/proposal/old/: Capstone Proposal - Manu Hegde.docx  Proposal Template.docx  Shortened Capstone Proposal - Manu Hegde.docx  css565 proposal.docx
docs/reports/: Capstone_Report-Q1-2024_Fall.docx
docs/reports/final_report/Capstone Report - Manu Hegde/: 5_Results.tex  uwthesis.bib
docs/reports/final_report/Manu Hegde Writeup/: 1_Introduction.tex  2_TheoreticalBackground.tex  4_Methods.tex  6_Conclusion.tex  main.tex  uwthesis.cls
docs/reports/final_report/presentation/: Capstone_Project_TLDR_Presentation.pptx  _UW 16x9 Template.pptx  ppt plan.txt
docs/reports/final_report/report/: show_dup_citations.sh  unzip_report.sh
docs/reports/final_report/report/Capstone Report - Manu Hegde/: 1_Introduction.tex  2_TheoreticalBackground.tex  3_RelatedWork.tex  4_Methodology.tex  5_Experimentation.tex  6_Conclusion.tex  main.tex  uwthesis.bib  uwthesis.cls
docs/reports/final_report/resources/: Capstone report rough plan.txt  bibliography.tex
docs/reports/final_report/resources/images/drawings/: .$tldr-app-modules.drawio.bkp  .$tldr-app-worklfow.drawio.bkp  npu-accelerator-module-worklfow.drawio  tldr-app-module-interactions.drawio  tldr-app-modules.drawio  tldr-app-worklfow.drawio
docs/reports/final_report/result-text/: chatgpt-response1.txt  chatgpt-response2.txt  chatgpt-response3.txt  chatgpt-responses.txt  tldr-respnose1.txt  tldr-respnose2.txt  tldr-respnose3.txt  tldr-respnoses.txt
docs/reports/final_report/scripts/: reorder_bibtext.py
model_weights/: llm-weights
model_weights/scripts/: download_gemini_nano.py  download_llama3_1b.sh  download_phi2.sh  download_phi3.sh  download_weights.py
python/: llama3_2.py  llama3py.py  phi3.py  requirements.txt
reports/: Independent Study - Manu Hegde - Au24.tex  Report-Q1-2024_Fall.docx  independent study - llm safety.tex
scripts/: setup_postgre.sh
scripts/database/: setup_db_and_tables.sql
tldr_app/: .gitignore
tldr_app/RAG-py/: file-watcher.py  langchain.py  pdf_metadata.json  requirements.txt
tldr_app/corpus/complete/: some reccomended content.txt
tldr_app/corpus/current/: 0.System Design Interview An Insider’s Guide by Alex Xu.pdf.vecdump
tldr_app/swift_ui/tldr/tldr.xcodeproj/: project.pbxproj
tldr_app/swift_ui/tldr/tldr/Models/: Conversation.swift  Message.swift
tldr_app/swift_ui/tldr/tldr/ViewModels/: ChatViewModel.swift
tldr_app/swift_ui/tldr/tldr/Views/: ContentView.swift
tldr_app/tldr-dekstop/: .gitignore  build-all-modules.sh
tldr_app/tldr-dekstop/npu/: build_release.sh  coreml-model-fix.py  output.json  package_release.sh
tldr_app/tldr-dekstop/npu/npu-acclerator/: compile-and-copy-model.sh
tldr_app/tldr-dekstop/npu/npu-acclerator/cssim/CosineSimilarity.mlmodelc/: metadata.json  model.mil
tldr_app/tldr-dekstop/npu/npu-acclerator/npu-acclerator/: CosineSimilarityBatched.mlmodel  NpuAPI.swift  VecDumpReader.swift  build-npu_test.sh  compile.sh  main.cpp  main.swift  npu_accelerator.h  npu_test  npu_test.cpp  swift_cpp_test
tldr_app/tldr-dekstop/npu/npu-acclerator/npu-acclerator.xcodeproj/: project.pbxproj
tldr_app/tldr-dekstop/npu/tldr_npu/: cosine_similarity.py  requirements.txt
tldr_app/tldr-dekstop/npu/tldr_npu/CosineSimilarityBatched.mlpackage/: Manifest.json
tldr_app/tldr-dekstop/release-products/: .gitignore
tldr_app/tldr-dekstop/release-products/Release/: .gitignore
tldr_app/tldr-dekstop/release-products/artefacts/: .gitignore
tldr_app/tldr-dekstop/release-products/artefacts/CosineSimilarityBatched.mlmodelc/: metadata.json
tldr_app/tldr-dekstop/release-products/include/: npu_accelerator.h  tldr_api.h
tldr_app/tldr-dekstop/swift_ui/tldr/: build-release.sh  link_external_libs.sh  link_tldr_libraries.sh
tldr_app/tldr-dekstop/swift_ui/tldr/TldrAPI/: Dependencies.xcconfig  TldrAPI.cpp  TldrAPI.hpp  TldrAPIPriv.hpp  TldrAPI_C.h  module.modulemap
tldr_app/tldr-dekstop/swift_ui/tldr/ext/: tldr_api.h
tldr_app/tldr-dekstop/swift_ui/tldr/tldr/: build-dependencies.xcconfig  tldr-Bridging-Header.h  tldr.entitlements  tldrApp.swift
tldr_app/tldr-dekstop/swift_ui/tldr/tldr.xcodeproj/: project.pbxproj
tldr_app/tldr-dekstop/swift_ui/tldr/tldrTests/: tldrTests.swift
tldr_app/tldr-dekstop/swift_ui/tldr/tldrUITests/: tldrUITests.swift  tldrUITestsLaunchTests.swift
tldr_app/tldr-dekstop/tldr_cpp/: .gitignore  CMakeLists.txt  build.sh  copy-release-products.sh  requirements_macos.sh
tldr_app/tldr-dekstop/tldr_cpp/src/: main.cpp  tldr.cpp  tldr.h
tldr_app/tldr-dekstop/tldr_cpp/src/c++/: constants.h
tldr_app/tldr-dekstop/tldr_cpp/src/c++/db/: connection_pool.h  postgres_database.cpp
tldr_app/tldr-dekstop/tldr_cpp/src/lib_tldr/: constants.h  definitions.h  file_hashes.cpp  lib_tldr.cpp  lib_tldr.h  llm-wrapper.cpp  llm-wrapper.h  tldr.cpp  tldr_api.cpp  tldr_api.h  tldr_lib.cpp  tldr_lib.h  vec_dump.cpp  vec_dump.h
tldr_app/tldr-dekstop/tldr_cpp/src/lib_tldr/db/: database.h  postgres_database.cpp  postgres_database.h  postgres_database_fixed.cpp  sqlite_database.cpp  sqlite_database.h
tldr_app/tldr-dekstop/tldr_cpp/src/lib_tldr/llm/: LlmChat.cpp  LlmChat.h  LlmContextPool.cpp  LlmContextPool.h  LlmEmbeddings.cpp  LlmEmbeddings.h  llm-wrapper.cpp  llm-wrapper.h  llm_chat.cpp  llm_chat.h  llm_embedding.cpp  llm_embedding.h
tldr_app/tldr-dekstop/tldr_cpp/src/lib_tldr/wrappers/swift/: TLDRWrapper.swift  tldr_wrapper.cpp  tldr_wrapper.h
tldr_app/tldr-dekstop/tldr_cpp/wrappers/swift/: module.modulemap  tldr_bridge.cpp  tldr_bridge.h
tldr_app/tldr_cpp/: .gitignore  CMakeLists.txt  build.sh
tldr_app/tldr_cpp/src/c++/: constants.h  file-watcher.cpp  file-watcher.h  main.cpp  main.h
tldr_app/tldr_cpp/src/c++/db/: connection_pool.h  database.h  postgres_database.cpp  postgres_database.h  sqlite_database.cpp  sqlite_database.h
tldr_app/tldr_cpp/tests/: test_pdf.cpp  test_pdf.h
(+30 files in other folders)
